# dev-proxy

./: .env  .gitignore  Cargo.toml  Readme.md  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/__tests__/: setup.ts  utils.test.ts
frontend/src/components/ui/: Button.tsx
proxy-server/: .env  Cargo.toml
proxy-server/src/: app.rs  main.rs  proxy.rs
proxy-test/: package-lock.json  package.json  test-proxy-debug.js  test-proxy-real.js  test-proxy.js
proxy-ui/: README.md  angular.json  package-lock.json  package.json
proxy-ui/src/: index.html
proxy-ui/src/app/: app.routes.ts  app.spec.ts  app.ts
proxy-ui/src/app/sse-screen/: sse-screen.spec.ts  sse-screen.ts  sse-service.spec.ts  sse-service.ts
proxy-ui/src/sse-screen/: sse-screen.html  sse-screen.ts  sse-service.ts
src/: app.rs  cdp.rs  cdp_server.rs  lib.rs  main.rs  main.ts  mitm.rs  proxy.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tests/: commands.rs
src/cdp/: cdp-server.ts  event-mapper.ts
src/dashboard/: server.ts
src/proxy/: mitm-server.ts
tests/: cdp_server_functional.rs  end_to_end_cdp_proxy_functional.rs  proxy_functional.rs
