[package]
name = "proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["make", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["full"] }
