[package]
name = "proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = {version = "0.12.5", features = ["typed-header"]}
dotenv = "0.15.0"
futures-util = {version = "0.3.31", default-features = false, features = ["sink", "std"]}
headers = "0.4.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", features = ["make", "util"] }
tower-http = {version = "0.6.8", features = ["fs", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
